Fix modal not showing bug

--- a/src/ui/assets/styles/pages/d3vis.scss
+++ b/src/ui/assets/styles/pages/d3vis.scss
@@ -60,7 +60,7 @@ g.tooltip rect:first-of-type {
 
 @media only screen and (min-width: 760px) {
 	.controlsSvg {
-		width: 250px;
+		width: 350px;
 		right:0;
 	}
 }
